--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "linzzzil/linzili.github.io"
 author:
   # Biographic information
   avatar           : "profile.jpg"
-  name             : "Linzi Li"
+  name             : "Linzi Li\n李林子\n"
   pronouns         : # example: "she/her"  
   bio              : "PhD Candidate in Epidemiology"
   location         : "Atlanta, GA"
@@ -46,7 +46,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/Linzzzil"
+  github           : "Linzzzil"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
